--- a/cleaning/load-dataset.ipynb
+++ b/cleaning/load-dataset.ipynb
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "path = '/Users/gerardovitaleerrico/Documents/DataCamp/globalpowerplantdatabasev120/global_power_plant_database.csv'\n",
+    "path = '../globalpowerplantdatabasev120/global_power_plant_database.csv'\n",
     "\n",
     "raw_data = open(path, 'rb').read()\n",
     "result = chardet.detect(raw_data)\n",
@@ -510,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path_1 = '/Users/gerardovitaleerrico/Documents/DataCamp/globalpowerplantdatabasev120/global_power_plant.csv'"
+    "save_path_1 = '../globalpowerplantdatabasev120/global_power_plant.csv'"
    ]
   },
   {
