--- a/cleaning/manage-dataset .ipynb
+++ b/cleaning/manage-dataset .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/gerardovitaleerrico/Documents/DataCamp/globalpowerplantdatabasev120/global_power_plant.csv'\n",
+    "path = '../globalpowerplantdatabasev120/global_power_plant.csv'\n",
     "cols = list(pd.read_csv(path, nrows=1))\n",
     "cols = [i for i in cols if 'Unnamed' not in i]\n",
     "power_plants = pd.read_csv(path, usecols=cols) # index_col=['country']"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "4                       NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,12 +220,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Due to the pandas convention of interpreting 'NA' as NaN value, the North America code 'NA' has been change to 'NA*'"
+    "### Due to the pandas convention of interpreting 'NA' as NaN value, the North America code 'NA' has been changed to 'NA*'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "'NA*'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "array(['AS', 'EU', 'AF', nan, 'SA', 'OC', 'NA*'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "29886                       NaN       NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,11 +421,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path_1 = '/Users/gerardovitaleerrico/Documents/DataCamp/globalpowerplantdatabasev120/global_power_plants_clean.csv'\n",
+    "save_path_1 = '../globalpowerplantdatabasev120/global_power_plants_clean.csv'\n",
     "power_plants.to_csv(save_path_1)"
    ]
   },
@@ -433,7 +433,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a numpy array [ lat, lng ] = [ latitude, longitude ]"
+    "## Creating a numpy array [ lat, lng ] = [ latitude, longitude ]\n",
+    "### This will help us on the two new dataframe constrution"
    ]
   },
   {
@@ -487,10 +488,12 @@
    "source": [
     "****\n",
     "# Geocode function =>\n",
-    "## Creating a new DataFrame with the following columns, based on the geolocation:\n",
+    "## Creating a new DataFrame with the following columns:\n",
     "- Locality\n",
     "- City\n",
-    "- Stade"
+    "- Stade\n",
+    "\n",
+    "## These data have been collected from the Google Maps API"
    ]
   },
   {
@@ -499,19 +502,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv('../global-power-plants-pipeline/.env')\n",
-    "GEO_KEY = os.getenv(\"GEO_KEY\")\n",
     "BASE_URL = \"https://maps.googleapis.com/maps/api/geocode/json\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The geocode function will interact with the API, perform the request, and return a dictionary from which the next function wil extract some valuable information.\n",
+    "### Basically, it takes latitude and longitude as arguments and returns route, locality, state, country, zip code..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def geocode(lat, lng):\n",
-    "    params = urllib.parse.urlencode({\"latlng\": f\"{lat},{lng}\", \"key\": API_KEY,})\n",
+    "    load_dotenv('../global-power-plants-pipeline/.env')\n",
+    "    GEO_KEY = os.getenv(\"GEO_KEY\")\n",
+    "    params = urllib.parse.urlencode({\"latlng\": f\"{lat},{lng}\", \"key\": GEO_KEY,})\n",
     "    url = f\"{BASE_URL}?{params}\"\n",
     "    current_delay = 0.1  # Set the initial retry delay to 100ms.\n",
     "    max_delay = 5  # Set the maximum retry delay to 5 seconds.\n",
@@ -543,8 +554,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The apply_geocode, as the name state, applies the geocode function. First, it creates an empty numpy , and then it fills it in with the data extracted from the Google Maps API"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -578,7 +596,7 @@
     "geo_array = apply_geocode()\n",
     "geo_df = pd.DataFrame(geo_array, columns=['locality', 'city', 'state'])\n",
     "\n",
-    "save_path = '/Users/gerardovitaleerrico/Documents/DataCamp/globalpowerplantdatabasev120/geo_df.csv'\n",
+    "save_path = '../globalpowerplantdatabasev120/geo_df.csv'\n",
     "\n",
     "geo_df.to_csv(save_path)"
    ]
@@ -589,14 +607,15 @@
    "source": [
     "****\n",
     "# AirQuality function =>\n",
-    "## Creating another DataFrame, the air quality df associate with the geolocation [ lat, lon ], just for Country == Sapin due to the API's request limitation\n",
-    "### The data added by the AirQuality API describe the air quality in the area, when data is found; on the contrary, it would describe the closest area/locality/city.\n",
-    "- \"aqi\":\n",
-    "- \"pm10\":\n",
-    "- \"co\":\n",
-    "- \"o3\":\n",
-    "- \"so2\":\n",
-    "- \"no2\":"
+    "## In this step, another DataFrame is built by collecting some air quality indicators\n",
+    "### The data added by the Weather Bit API describe the air quality in the area when the latitude and longitude are provided, only if the data is found; on the contrary, it would return the measure in the closest are.\n",
+    "### The following are the indicators that have been taking into consideration for this study:\n",
+    "* aqi: Air Quality Index [US - EPA standard 0 - +500]\n",
+    "* pm10: Concentration of particulate matter < 10 microns (µg/m³)\n",
+    "* co: Concentration of carbon monoxide (µg/m³)\n",
+    "* o3: Concentration of surface O3 (µg/m³)\n",
+    "* so2: Concentration of surface SO2 (µg/m³)\n",
+    "* no2: Concentration of surface NO2 (µg/m³)"
    ]
   },
   {
@@ -605,19 +624,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv('../global-power-plants-pipeline/.env')\n",
-    "AIR_KEY = os.getenv(\"AIR_KEY\")\n",
     "BASE_URL = \"https://api.weatherbit.io/v2.0/current/airquality\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The air_quality function takes, as well as the geocode function, latitude and longitude as argument, and returns the parameters listed above. In the same way, air_quality interact with the Weather Bit API in order to provide the information needed"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def air_quality(lat, lng):\n",
-    "    params = urllib.parse.urlencode({\"lat\":f\"{lat}\", \"lon\":f\"{lng}\", \"key\": API_KEY,})\n",
+    "    load_dotenv('../global-power-plants-pipeline/.env')\n",
+    "    AIR_KEY = os.getenv(\"AIR_KEY\")\n",
+    "    params = urllib.parse.urlencode({\"lat\":f\"{lat}\", \"lon\":f\"{lng}\", \"key\": AIR_KEY,})\n",
     "    url = f\"{BASE_URL}?{params}\"\n",
     "    current_delay = 0.1  # Set the initial retry delay to 100ms.\n",
     "    max_delay = 5  # Set the maximum retry delay to 5 seconds.\n",
@@ -645,34 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spain_df  = power_plants[power_plants.index.isin(['ESP'])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "latlng_spain = spain_df[['latitude', 'longitude']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "latlng_spain = latlng_spain.to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +680,7 @@
        "(array([], shape=(0, 2), dtype=float64), (0, 2))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +691,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latlng_spain = power_plants.iloc[17317:17452]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +709,7 @@
     "def apply_aq():\n",
     "    air_array = np.empty((29910, 6))\n",
     "\n",
-    "    for index,lat_lng in enumerate(latlng_spain[:480]):\n",
+    "    for index,lat_lng in enumerate(latlng_spain[480:980]):\n",
     "        air_data = air_quality(lat_lng[0], lat_lng[1])\n",
     "        for i in range(len(air_data)):\n",
     "            for j,k in enumerate(pollutants):\n",
@@ -722,7 +730,7 @@
     "air_array = apply_aq()\n",
     "air_df = pd.DataFrame(air_array, columns=pollutants)\n",
     "\n",
-    "save_path = '/Users/gerardovitaleerrico/Documents/DataCamp/globalpowerplantdatabasev120/air_df.csv'\n",
+    "save_path = '../globalpowerplantdatabasev120/air_df2.csv'\n",
     "\n",
     "air_df.to_csv(save_path)"
    ]
