--- a/cleaning/spain-power-plants.ipynb
+++ b/cleaning/spain-power-plants.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/gerardovitaleerrico/Documents/DataCamp/globalpowerplantdatabasev120/global_power_plant.csv'\n",
+    "path = '../globalpowerplantdatabasev120/global_power_plant.csv'\n",
     "cols = list(pd.read_csv(path, nrows=1))\n",
     "cols = [i for i in cols if 'Unnamed' not in i]\n",
     "power_plants = pd.read_csv(path, usecols=cols, index_col=['country'])"
@@ -313,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/gerardovitaleerrico/Documents/DataCamp/globalpowerplantdatabasev120/spain_power_plants.csv'\n",
+    "path = '../globalpowerplantdatabasev120/spain_power_plants.csv'\n",
     "spain_pp.to_csv(path)"
    ]
   }
